--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 
 a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 .img {
@@ -25,7 +25,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 10px 2;
-    background-color: black;
+    background-color: snow;
 }
 
 .Car {
@@ -37,7 +37,7 @@ a {
 
 .nav-item {
     font-size: 18px;
-    color: black;
+    color: salmon;
     text-decoration: none;
     font-weight: bold;
     hover {
@@ -47,4 +47,38 @@ a {
 
 .icons {
     color: white;
+}
+
+.image-text{
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+.image-text h1{
+    font-size: 60px;
+}
+
+.main-section-button{
+    background-color: rgb(red, green, blue);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.main-section-button:hover{
+    background-color: rgb(173, 3, 31);
+}
+
+.third-hero-section{
+    background-image: url(../img/bigcar.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 60vh;
+}
+
+.second-side{
+    text-align: center;
 }
